<resources>
    <string name="app_name">BookWorm</string>
    <string name="oder">Oder</string>
    <string name="book_name">Book Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="post_book">Post Book</string>
    <string name="read_with_us_and_crave_with_us">Read with us and crave with us...</string>
    <string name="book_worm">Book Worm</string>
    <string name="phone">Phone </string>
    <string name="sendotp">sendotp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_sign_in">Verify and Sign In</string>
    <string name="sign_out">sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_as_a_publisher">Sign in as a Publisher</string>
    <string name="sign_in_as_a_customer">sign in as a customer</string>
    <string name="connect_as_publisher">Connect as Publisher</string>
    <string name="connect_as_customer">Connect as Customer</string>
    <string name="plogin">login</string>
</resources>